# pandas_mcp

./: .gitignore  LICENSE  README.md  example_data.csv  main.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py
examples/: mcp_example.py
src/: __init__.py
src/controllers/: __init__.py  data_controller.py  pipeline_controller.py
src/examples/: __init__.py  basic_example.py
src/models/: __init__.py  data_model.py  schema_model.py
src/processors/: __init__.py  analysis_processor.py  base_processor.py  clean_processor.py  transform_processor.py  visualization_processor.py
